tests/harness/errors/026_empty_zdt_literal.eu
# Empty ZDT literal
x: t""
